--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,7 @@
     	<servlet-name>CamelServlet</servlet-name>
     	<url-pattern>/services/*</url-pattern>
   	</servlet-mapping>
+  	<welcome-file-list>
+  		<welcome-file>pages/home.html</welcome-file>
+  	</welcome-file-list>
 </web-app>
